# image2sound

./: .gitignore  ARCHITECTURE.md  INSTALL.md  README.md  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt
#/: pyvenv.cfg
.github/workflows/: ci.yml  release.yml
adjust/: pyvenv.cfg
image2sound/: cli.py  compose.py  features.py  mapping.py  synth.py  ui.py
path/: pyvenv.cfg
python3.12/: pyvenv.cfg
scripts/: batch_demo.py
tests/: test_features.py  test_mapping.py  test_pipeline_smoke.py  test_ui_smoke.py
