[project]
name = "image2sound"
version = "0.4.0"
description = "Turn images into short musical pieces via algorithmic sonification."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{ name = "Rami Pinku", email = "contact@newrelam.co" }]
keywords = ["audio", "music", "sonification", "image", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio :: Generation",
]

# Optional but recommended
[project.urls]
Homepage = "https://newrelam.co/projects/image2sound"
Repository = "https://github.com/newrealmco/image2sound"
Issues = "https://github.com/newrealmco/image2sound/issues"
Changelog = "https://github.com/newrealmco/image2sound/releases"

# Console scripts (CLI & UI)
[project.scripts]
image2sound = "image2sound.cli:main"
image2sound-ui = "image2sound.ui:main"

# Extras (UI)
[project.optional-dependencies]
ui = ["gradio>=4.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
